group 'org.mbari.m3'
version '0.0.1-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'application'

sourceCompatibility = 1.9
mainClassName = 'org.mbari.m3.annosync.Main'

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    // The production code uses the SLF4J logging API at compile time
    compile 'org.slf4j:slf4j-api:1.7.25'
    testCompile 'junit:junit:4.12'
}

jar {
    manifest {
        attributes 'Main-Class': 'org.mbari.m3.annosync.App'
    }
}

task wrapper(type: Wrapper) {
    gradleVersion = '4.4.1'
}

def java_home = System.getenv('JAVA_HOME')
print(java_home)
task link(type: Exec) {
    dependsOn 'clean'
    dependsOn 'jar'

    workingDir 'build'

    commandLine "${java_home}/bin/jlink",
            '--module-path', "libs${File.pathSeparatorChar}${java_home}/jmods",
            '--add-modules', 'org.mbari.m3.annosync',
            '--launcher', "annosync=org.mbari.m3.annosync/${mainClassName}",
            '--output', 'dist',
            '--strip-debug',
            '--compress', '2',
            '--no-header-files',
            '--no-man-pages'
}

